<resources>
    <string name="app_name">Game Catalog</string>
    <string name="percentage">Caricamento %d%%</string>
    <string name="real_appname">Shows Tracking App</string>
    <string name="serie_tv">Serie TV</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="example_completed">10/10</string>
    <string name="nome">Nome</string>
    <string name="stagioni">Stagioni:</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="episodi_visti">Episodi visti</string>
    <string name="episodi_totali">Episodi totali</string>
    <string name="aggiungi_stagione">Aggiungi stagione</string>
    <string name="sfondo">Sfondo</string>
    <string name="eliminare_stagione">Eliminare stagione?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="rimuovi_serie">Rimuovi serie</string>
    <string name="aggiorna_serie">Aggiorna</string>
    <string name="modifica_stagione">Modifica Stagione</string>
    <string name="rimuovi_stagione">Rimuovi Stagione</string>
    <string name="status">Stato</string>
    <string name="has_saga">L\'Anime ha delle saghe?</string>
    <string name="sagas">Saghe: </string>
    <string name="dati_errati">I dati sono errati!</string>
</resources>