<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="344dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:adjustViewBounds="false"
        android:background="@drawable/round_background"
        android:contentDescription="@string/sfondo" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignStart="@id/background"
        android:layout_alignTop="@+id/background"
        android:layout_alignEnd="@+id/background"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/eliminare_stagione"
        android:textColor="@color/light_blue" />


    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_alignStart="@+id/text"
        android:layout_marginStart="20dp"
        android:background="@drawable/round_button"
        android:text="@string/no" />

    <Button
        android:id="@+id/si_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_alignEnd="@+id/text"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_button"
        android:text="@string/si" />

</RelativeLayout>