<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/serie_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/nome"
        android:layout_below="@+id/name"
        android:textColorHint="@color/light_blue"
        app:boxStrokeColor="@color/light_blue"
        app:endIconTint="@color/transparent">

        <AutoCompleteTextView
            android:id="@+id/name_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:inputType="text"
            android:textColor="@color/light_blue"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/name_input_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/add_season"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:text="@string/stagioni" />

    <ImageButton
        android:id="@+id/add_season"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/name_input_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/icons8_add_100"
        android:backgroundTint="@drawable/change_color"
        android:contentDescription="@string/aggiungi_stagione" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/seasons_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_button"
        android:layout_below="@+id/add_season"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_button"
        android:text="@string/aggiungi" />

</RelativeLayout>