<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="344dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:adjustViewBounds="false"
        android:background="@drawable/round_background"
        android:contentDescription="@string/sfondo" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/icons8_add_100"
        android:rotation="45"
        android:layout_margin="20dp"
        android:backgroundTint="@drawable/change_color"
        android:layout_alignTop="@+id/background"
        android:layout_alignEnd="@+id/background"/>

    <TextView
        android:id="@+id/number_input_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:hint="@string/nome"
        android:textColorHint="@color/light_blue"
        app:boxStrokeColor="@color/light_blue"
        app:endIconTint="@color/transparent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/seen_input_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/episodi_visti"
        android:layout_below="@+id/number_input_text"
        android:textColorHint="@color/light_blue"
        app:boxStrokeColor="@color/light_blue"
        app:endIconTint="@color/transparent">

        <AutoCompleteTextView
            android:id="@+id/seen_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:inputType="number"
            android:textColor="@color/light_blue"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/total_input_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/episodi_totali"
        android:layout_below="@+id/seen_input_text"
        android:textColorHint="@color/light_blue"
        app:boxStrokeColor="@color/light_blue"
        app:endIconTint="@color/transparent">

        <AutoCompleteTextView
            android:id="@+id/total_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:inputType="number"
            android:textColor="@color/light_blue"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_input_text"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:text="@string/aggiungi_stagione" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/add_season"
        android:layout_alignStart="@+id/background"
        android:layout_alignEnd="@id/background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#0D4360"
        android:foregroundTint="#0D4360"
        app:srcCompat="@android:drawable/bottom_bar"
        android:visibility="gone"
        app:tint="#0D4360" />

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/background"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/line"
        android:background="@drawable/round_button"
        android:text="@string/rimuovi_stagione"
        android:visibility="gone"/>

</RelativeLayout>